--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
             <h1 class="navbar-brand m-0 select-font">Luar Móveis</h1>
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+            <button  class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
@@ -95,27 +95,27 @@
                             <Button type="button" data-bs-toggle="tab" data-bs-target="#sofas" class="nav-link text-colored fw-bold text-start ">Sofas</Button>
                         </nav>
                     </aside>
-                    <div class="mt-5">
+                    <div class="mt-5 mb-5">
                         <div class="tab-content">
                             <div class="tab-pane active" id="camas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/cama1.jpg" class=" d-block w-100">
+                                        <img  alt="" src="./img/moveis/cama1.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Cama 1</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/cama2.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/cama2.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Cama 2</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/cama3.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/cama3.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Cama 3</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/cama4.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/cama4.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Cama 4</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
@@ -124,22 +124,22 @@
                             <div class="tab-pane" id="guarda-roupas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/guarda roupas1.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/guarda roupas1.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Guarda-Roupas 1</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/guarda roupas 2.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/guarda roupas 2.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Guarda-Roupas 2</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/guarda roupas 3.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/guarda roupas 3.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Guarda-Roupas 3</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/guarda roupas 4.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/guarda roupas 4.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Guarda-Roupas 4</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
@@ -148,22 +148,22 @@
                             <div class="tab-pane" id="mesas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/mesa1.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/mesa1.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Mesa 1</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/mesa2.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/mesa2.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Mesa 2</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/mesa3.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/mesa3.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Mesa 3</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/mesa4.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/mesa4.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Mesa 4</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
@@ -172,22 +172,22 @@
                             <div class="tab-pane" id="sofas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/sofa1.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/sofa1.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Sofa 1</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/sofa2.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/sofa2.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Sofa 2</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/sofa3.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/sofa3.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Sofa 3</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./img/moveis/sofa 4.jpg" class=" d-block w-100">
+                                        <img alt="" src="./img/moveis/sofa 4.jpg" class=" d-block h-100 w-100" style="object-fit: cover;">
                                         <h5 class="fw-bold mt-2">Sofa 4</h5> 
                                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                     </div>
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </section>
-        <section id="fale-conosco" class="pt-5 pb-5">
+        <section id="fale-conosco" class="pt-5 pb-5 ">
             <div class="container">
                 <div class="row">
                     <h2 class="select-font font-blue text-center">Entre em contato</h2>
